[gd_scene load_steps=5 format=3 uid="uid://qwvqkv7nkher"]

[ext_resource type="Script" path="res://scenes/traveling_salesman/traveling_salesman.gd" id="1_0q31n"]
[ext_resource type="PackedScene" uid="uid://difgd3c2mu8e2" path="res://components/town/town.tscn" id="2_lor7r"]
[ext_resource type="PackedScene" uid="uid://7c0jgoeei1g6" path="res://core/components/toast/toast_container.tscn" id="3_2f23k"]
[ext_resource type="PackedScene" uid="uid://ch7nrdnr6t88s" path="res://core/components/player_camera/player_camera.tscn" id="4_svort"]

[node name="TravellingSalesman" type="Node2D"]
script = ExtResource("1_0q31n")
town_scene = ExtResource("2_lor7r")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="SolvingLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Solving {} point problem."

[node name="SearchedLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Searched: 0 / 0"

[node name="ProgressLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Progress: 0%"

[node name="DurationLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Duration: 0.00s"

[node name="DistanceLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Best dst: N/A"

[node name="SolveButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Solve"

[node name="StopButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Stop"

[node name="ClearButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="ToastContainer" parent="CanvasLayer" instance=ExtResource("3_2f23k")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
size_flags_vertical = 10
metadata/_edit_use_anchors_ = true

[node name="Player Camera" parent="." instance=ExtResource("4_svort")]

[connection signal="pressed" from="CanvasLayer/VBoxContainer/SolveButton" to="." method="_on_solve_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
